# MyImageSearch

./: Array_combiner.py  README.md  app.py  conda_requirements.txt  create_index.py  embedding.npy  install.txt  main.py  pyproject.toml  qwen3_vl_embed_image_fixed.py  requirements.txt  sampleImageDL.py  インターフェイス.adoc  要件.adoc
app/: logging_config.py
app/application/: __init__.py  accessor.py  embedding_backend.py  search.py  usecase.py
app/domain/: __init__.py  domain_object.py  repository.py
app/infrastructure/: __init__.py  dummy_accessor.py  dummy_repository.py  local_accessor.py  local_repository.py  model_metadata.py
app/presentation/: __init__.py  controller.py  file_utils.py
clip_meta/Qwen--Qwen3-VL-Embedding-2B/: metafiles.index  metafiles.index.mean.npy  model_meta.json  sqlite_image_meta.db  sqlite_image_meta.db-shm  sqlite_image_meta.db-wal
clip_meta/ViT-L-14-336-openai/: metafiles.index  sqlite_image_meta.db  sqlite_image_meta.db-shm  sqlite_image_meta.db-wal
meta/: aesthetic_quality.json  index_item_list.json  item_json.json
model/: aesthetic_ranking100.pth  aesthetic_rankingv2.pth
script/: CopyImages.py  ImageSearch.py  MetaCreate.py  NameSearch.py  TextAndImageSearch.py  TextSearch.py  core.py  script.py  util.py
templates/: index.html
tests/: test_controller_model_params.py  test_controller_resource.py  test_create_index_feature_routing.py  test_file_utils.py  test_local_accessor_qwen.py  test_local_repository_models.py  test_missing_image_handling.py  test_qwen_collate.py  test_tagger.py  test_usecase_result_sorting.py
(+1733 files in other folders)
