[project]
name = "myimagesearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.0",
    "flask>=3.1.2",
    "onnxruntime-gpu>=1.23.2",
    "open-clip-torch>=3.2.0",
    "pandas>=2.3.3",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
