[project]
name = "myimagesearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.0",
    "flask>=3.1.2",
    "onnxruntime-gpu>=1.23.2",
    "open-clip-torch>=3.2.0",
    "pandas>=2.3.3",
    "rich>=13.9.4",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130" },
]
torchvision = [
    { index = "pytorch-cu130" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true